# quickner

./: .gitignore  Cargo.toml  Makefile  README.md  annotations.jsonl.ann  config.toml  pyproject.toml  quickner.pyi
.github/workflows/: CI.yaml  Python Package CI.yaml  Rust Package CI.yaml
config/: config.toml
data/: entities.csv
quickner-cli/: Cargo.toml
quickner-cli/src/: cli.rs  config.rs  lib.rs  main.rs  models.rs
quickner-core/: Cargo.toml  README.md
quickner-core/src/: config.rs  document.rs  entity.rs  lib.rs  models.rs  quickner.rs  utils.rs
quickner/src/: models.rs  utils.rs
src/: cli.rs  config.rs  lib.rs  main.rs  models.rs  pyconfig.rs  pydocument.rs  pyentity.rs  pymodels.rs  pyquickner.rs  utils.rs
tests/: performance.py  test.py
