[package]
name = "quickner"
version = "0.1.1"
edition = "2021"
authors = ["Omar MHAIMDAT"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.0"
indicatif = "0.17.0"
toml = "0.5.11"
env_logger = "0.10.0"
rayon = "1.6"
csv = "1.1"
