[build-system]
requires = ["maturin>=0.12,<0.15"]
build-backend = "maturin"

[project]
name = "quickner"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[project.scripts]
Quickner = "quickner:Quickner"

[project.gui-scripts]
Quickner = "quickner:Quickner"
